..F....... [ZBXNEXT-4447] updated styles for action icons in compact view - highlight whole row, fixed text alignment in icon counts, updated sprite files

--- a/sass/stylesheets/sass/dark-theme.scss
+++ b/sass/stylesheets/sass/dark-theme.scss
@@ -196,3 +196,15 @@ $ok-ack-fg-color: #00ff00;
 		}
 	}
 }
+
+.icon-action-severity-up::before {
+	background-position: -624px -245px;
+}
+.icon-action-severity-down::before {
+	background-position: -649px -245px;
+}
+.icon-actions-number-gray {
+	&[data-count]::after {
+		color: $font-selected-color;
+	}
+}
