--- a/sass/stylesheets/sass/hc-dark.scss
+++ b/sass/stylesheets/sass/hc-dark.scss
@@ -1100,3 +1100,66 @@ td.inactive-bg {
 		}
 	}
 }
+
+.icon-action-command::before {
+	background-position: -249px -325px;
+}
+.icon-action-close::before {
+	background-position: -224px -325px;
+}
+.icon-action-msg::before {
+	background-position: -299px -325px;
+}
+.icon-action-severity-up::before {
+	background-position: -349px -325px;
+}
+.icon-action-severity-down::before {
+	background-position: -375px -325px;
+}
+.icon-action-severity-changed::before {
+	background-position: -399px -325px;
+}
+.icon-action-message::before {
+	background-position: -199px -325px;
+}
+.icon-action-ack::before {
+	background-position: -323px -325px;
+}
+.icon-problem-generated::before {
+	background-position: -449px -325px;
+}
+.icon-problem-recovery::before {
+	background-position: -424px -325px;
+}
+.icon-action-msgs {
+	&[data-count]::after {
+		color: $ui-bg-color;
+	}
+	&::before {
+		background-position: -474px -325px;
+	}
+}
+.icon-actions-number-gray {
+	&[data-count]::after {
+		color: $ui-bg-selected-color;
+	}
+	&::before {
+		background-position: -499px -325px;
+	}
+}
+.icon-actions-number-yellow {
+	&[data-count]::after {
+		color: $alt-orange;
+	}
+	&::before {
+		background-position: -549px -325px;
+	}
+}
+.icon-actions-number-red {
+	&[data-count]::after {
+		color: $red;
+	}
+	&::before {
+		background-position: -524px -325px;
+	}
+}
